--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -4,4 +4,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+   The great myth of our times is that technology is communication
+</ion-content>
