--- a/src/app/news/news.page.html
+++ b/src/app/news/news.page.html
@@ -1,9 +1,17 @@
-<ion-header>
+<ion-header color="primary">
   <ion-toolbar>
-    <ion-title>news</ion-title>
+    <ion-title>Tech News</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+<ion-card *ngFor = "let article of data?.articles" (click)="onGoToSinglePage(article)">
+   <ion-img [src]="article.urlToImage"></ion-img>
+  <ion-card-header>
+    <ion-card-title>{{article.title}}</ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <!-- <p>{{article.description}}</p> -->
+  </ion-card-content>
+</ion-card>
 </ion-content>
